--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -17,7 +17,7 @@ jobs:
   strategy:
     fail-fast: false
     matrix:
-      solution: [dask]
+      solution: [data.table, collapse, dplyr, pandas, pydatatable, spark, juliadf, juliads, polars, arrow, duckdb, duckdb-latest, datafusion, dask]
   name: Regression Tests solo solutions
   runs-on: ubuntu-20.04
   env:
@@ -38,12 +38,17 @@ jobs:
       shell: bash
       run: ./_utils/setup-small.sh
 
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    - name: Generate 500mb datasets
+      shell: bash
+      run: ./_utils/generate-data-small.sh
 
     - name: Remove old logs
       shell: bash
       run: rm time.csv logs.csv
+
+    - name: Update virtualenv
+      shell: bash
+      run: python3 -m pip install virtualenv
 
     - name: Install all solutions
       shell: bash
@@ -52,10 +57,6 @@ jobs:
     - name: Turn swap off
       shell: bash
       run: sudo swapoff -a
-
-    - name: Generate 500mb datasets
-      shell: bash
-      run: ./_utils/generate-data-small.sh
 
     - name: Run mini GroupBy benchmark
       shell: bash
@@ -170,4 +171,3 @@ jobs:
         name: all-out.zip
         path: all-out.zip
         if-no-files-found: error
-
